
### Changed

- Quando o seu silo não está em sua capacidade máxima e você colhe uma planta que ultrapassaria o limite, agora o peso colhido é reduzido para o que cabe em seu silo. Com isso a colheita de uma planta só será impedida se o silo estiver completamente cheio. 

### Fixed

- A notificação de participação de lucros na compra de imagens foi corrigida. 
- Removida a possibilidade da semente de erva ser um prêmio em dailies. - Reportado por @mareys.

## [5.20.7] - 2025-01-02

### Fixed

- Se o silo está cheio, ainda é possível descartar plantas em crescimento ou aprodecidas.

## [5.20.6] - 2024-11-03

### Removed

- Evento de dia dos mortos foi completamente removido.

## [5.20.5] - 2024-11-01

### Removed

- O evento de dia dos mortos terminou! Gaste todos seus Cempasúchil até o fim do segundo dia de novembro!

## [5.20.4] - 2024-10-24

### Added

- Adicionado a melhor e pior estação das sementes no `/loja comprar sementes`. - Sugerido por @0_tal_do_mabs

## [5.20.3] - 2024-10-19

### Added

- Adicionado um novo top! Use o comando `/top fazendeiros tipo:experiência` para ver os fazendeiros mais experientes.

### Changed

- O `/personalizar título` agora possui bullet points para diferenciar os títulos, facilitando na visualização mobile. - Sugerido por @mareys. 

## [5.20.2] - 2024-10-14

### Added

- **Evento de Dia dos Mortos** - Celebre o feriado mexicano até o dia 02 de novembro. A famosa flor *Cempasúchil* está disponível para ser plantada no `/fazendinha`! Compre já na loja `/loja comprar sementes`. Troque *Cempasúchil* por estrelinhas, título ou badge com `/dia dos mortos`. O valor máximo que pode se conseguir plantando *Cempasúchil* é aumentado em 0.3Kg. - Sugerido por @mareys. 

## [5.20.1] - 2024-10-06

### Fixed

- Não é mais possível trocar missões diárias já finalizadas. - Reportado por @mareys e @0_tal_do_mabs


## [5.20.0] - 2024-10-01

### Added
